# Early_Reading_Scoring_System

./: .gitignore  CMakeLists.txt  README.md  globalfunc.cpp  globalfunc.h  main.cpp
page/: AnimatedText.qml  BarChart.qml  Main.qml  OpenAni.qml  TeamItem.qml
resources/: config.json  team.json
